# game-dev-practices

./: .gitignore
g-snake-terminal/include/: Snake.h
g-snake-terminal/src/: Board.cpp  Cell.cpp
g-sudoku-terminal/: CMakeLists.txt
g-sudoku-terminal/include/: board.h  controller.h  game.h
g-sudoku-terminal/src/: board.cpp  controller.cpp  game.cpp  main.cpp
g_snake_console/: .gitignore  CMakeLists.txt
g_snake_console/include/: Controller.h
g_snake_console/src/: Apple.cpp  Game.cpp  Snake.cpp  main.cpp
g_snake_terminal/: .gitignore  CMakeLists.txt
g_snake_terminal/include/: Apple.h  Board.h  Game.h  Snake.h
g_snake_terminal/src/: Board.cpp  Controller.cpp
gp-snake-terminal/: CMakeLists.txt
gp-snake-terminal/include/: Apple.h  Board.h  Cell.h
gp-snake-terminal/src/: Apple.cpp  Game.cpp  Snake.cpp
gp-sudoku-terminal/: .clang-tidy  .editorconfig  CMakeLists.txt
gp-sudoku-terminal/include/: board.h  controller.h  game.h  graphics.h
gp-sudoku-terminal/src/: board.cpp  controller.cpp  game.cpp  graphics.cpp  main.cpp
